# TheRangerStar-JNI-Reflex-Gzip-Padding

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/nrcan/http/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/cryptor/: base64.c  base64.h  jni_tool.cpp
app/src/main/java/com/nrcan/http/: CryptoJNI.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nrcan/http/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
